--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
 
     <!-- Formulari -->
     <div class="mt-5">
-        <p class="h5 text-center mb-3">Afegeix el teu comentari</p>
+        <h5 class="h5 text-center mb-3">Afegeix el teu comentari</h5>
         <form id="forumForm" class="row g-3">
             <div class="col-12">
                 <label for="forumName" class="form-label">Pseudònim</label>
