--- a/index.html
+++ b/index.html
@@ -297,11 +297,11 @@
     <footer class="py-4" aria-label="peu de pàgina">
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-md-6 d-flex justify-content-md-start justify-content-center xarxes" aria-label="xarxes socials">
+                <div class="col-md-6 d-flex justify-content-md-start justify-content-center xarxes">
                     <a href="https://www.instagram.com" class="me-3" target="_blank"><img src="./IMG/Footer/Logoinstagram.png" alt="Instagram" width="28" height="28"></a>
                     <a href="https://x.com/?lang=ca" class="me-3" target="_blank"><img src="./IMG/Footer/LogoX.png" alt="X" width="28" height="28"></a>
                 </div>
-                <div class="col-md-6 d-flex justify-content-md-end justify-content-center legal" aria-label="enllaços legals">
+                <div class="col-md-6 d-flex justify-content-md-end justify-content-center legal">
                     <a href="#" class="me-2">Termes i condicions</a>
                     <span class="text-muted mx-1">|</span>
                     <a href="#" class="mx-2">Cookies</a>
