Revisió jerarquia titols

--- a/index.html
+++ b/index.html
@@ -240,31 +240,31 @@
     <div class="forum-wheel-container">
         <div class="forum-wheel">
             <div class="forum-card">
-                <h4>Dúvida sobre la Butaca Ballon</h4>
+                <p>Dúvida sobre la Butaca Ballon</p>
                 <p>Hola! Estic molt interessat en la Butaca Ballon d'Annun, però no sé si el teixit és resistent a taques. Tinc nens petits a casa i voldria saber si es pot netejar fàcilment.</p>
                 <small>— Marta R., Barcelona</small>
             </div>
 
             <div class="forum-card">
-                <h4>Chunky Cup: val la pena?</h4>
+                <p>Chunky Cup: val la pena?</p>
                 <p>Acabo de rebre la Chunky Cup de Gustaf Westman i és preciosa! El color és exactament com a la foto i el platet és perfecte.</p>
                 <small>— Jordi P., Girona</small>
             </div>
 
             <div class="forum-card active">
-                <h4>Taula Dalia per exterior</h4>
+                <p>Taula Dalia per exterior</p>
                 <p>Vaig instal·lar la taula Dalia de Hannun al meu balcó fa 3 mesos. Ha plogut força i el microciment aguanta perfecte.</p>
                 <small>— Laura M., Tarragona</small>
             </div>
 
             <div class="forum-card">
-                <h4>Cadira Trebalúger: muntatge?</h4>
+                <p>Cadira Trebalúger: muntatge?</p>
                 <p>Acabo de rebre la Cadira Trebalúger de Naan. Les instruccions són clares, però em falta una peça.</p>
                 <small>— Alex G., Lleida</small>
             </div>
 
             <div class="forum-card">
-                <h4>Làmpada Bici: il·luminació real</h4>
+                <p>Làmpada Bici: il·luminació real</p>
                 <p>La làmpada Bici de Paletos Bn és genial com a peça decorativa, però la llum és més aviat ambiental.</p>
                 <small>— Carla S., Sabadell</small>
             </div>
