--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
           </span>
         </button>
         <div class="collapse navbar-collapse" id="mainNav">
+          <img class="logo" src="./IMG/Logo/brescalogo.png" alt="Logotip de Bresca">
           <ul class="navbar-nav mx-auto mb-2 mb-md-0">
             <li class="nav-item"><a class="nav-link" href="#inici" aria-label="anar a l'inici">Inici</a></li>
             <li class="nav-item"><a class="nav-link" href="#galeria" aria-label="anar a la galeria">Galeria</a></li>
@@ -201,7 +202,7 @@
     </header>
     <div class="row align-items-center gx-5">
         <div class="col-12 col-lg-6">
-            <p class="text-justify">
+            <p>
                 Bresca som un equip apassionat pel disseny d'interiors sostenible i artesanal i de proximitat fundat el 2020 a Catalunya. La nostra missió és inspirar-te amb mobles i productes que combinin estètica moderna, materials ecològics i funcionalitat quotidiana. Treballem amb dissenyadors i marques locals com Mobles Lufe, Annun o Hannun per oferir peces úniques que transformin els teus espais en llocs acollidors i plens de personalitat.
             </p>
             <ul class="list-unstyled">
@@ -209,7 +210,7 @@
                 <li><strong>El nostre equip:</strong> Format per dissenyadors, artesans i entusiastes del disseny, amb més de 10 anys d'experiència col·lectiva.</li>
                 <li><strong>Compromís:</strong> Busquem marques que treballin amb materials reciclats i produeixin localment per minimitzar l'impacte ambiental.</li>
             </ul>
-            <p class="text-justify">
+            <p>
                 Si busques inspiració per renovar la teva llar o simplement t'agrada tot aquest món, Bresca és el teu taulell d'idees.
             </p>
         </div>
